# task_1

./: CMakeLists.txt  MatrixVector.cpp  MatrixVector.h  README.md  main.cpp
output/: MPI_proc_1_N_3000.txt  MPI_proc_1_N_3001.txt  MPI_proc_2_N_3000.txt  MPI_proc_2_N_3001.txt  MPI_proc_3_N_3000.txt  MPI_proc_3_N_3001.txt  MPI_proc_4_N_3000.txt  MPI_proc_4_N_3001.txt
